<?xml version="1.0"?>
<package format="2">
  <name>soft_body_demo</name>
  <version>0.0.0</version>
  <description>The soft_body_demo package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
